--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <nav>
             <nav class="container"
             <h1>DSMovie</h1>
+            <div class="dsmovie-contact-container">
+            <img src="img/github.svg" alt="Github">
             <a href="https://github.com\devsuperior">/devsuperior</a>
+            </div>
         </nav>
     </header>
 </body>
