--- a/index.html
+++ b/index.html
@@ -19,5 +19,18 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <Section id="dsmovie-card-list" class="container">
+
+            <div class="dsmovie-card">
+<img src="https://www.themoviedb.org/t/p/w440_and_h660_face/8PwVXsbRttRxk4pVBdgqnzPXQG1.jpg" alt="Doctor Stranger 2">
+            </div class="dsmovie-card-description">
+            <h3> Doctor Stranger 2</h3>
+            <a class="dsmovie-btn" href="form.html">
+            <button>Avaliar</button></a>
+            
+        </Section>
+    </main>
 </body>
 </html>
